# opengl_3d_scene

./: CMakeLists.txt  README.md  main.cpp
files/Cubemap/: Cubemap.cpp  Cubemap.h
files/Mesh/: Mesh.cpp  Mesh.h
files/Model/: Model.cpp  Model.h
files/Object/: Object.cpp  Object.h
files/Shader/: Shader.cpp  Shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/docs/html/: window_guide.html
shaders/: fragment_shader.glsl  vertex_shader.glsl
